# ai_chatbot

./: .env.example  .gitignore  Dockerfile.01_original  Dockerfile.02_bettering  Dockerfile.03_limitdeps  Dockerfile.04_cleandeps  Dockerfile.05_multistage  Dockerfile.06_bettercopy  Dockerfile.07_optimized  Dockerfile.08_optimized_no_root  README.md  docker-compose.yml  main.py  pyproject.toml
src/: app.py  main.py
src/ai_chatbot/: __main__.py  aimodel.py  assistant.py  chatbot.py
src/ai_chatbot/auth/: authenticator.py  config_loader.py
src/ai_chatbot/config/: config.yaml  example_config.yaml
src/ai_chatbot/gui/: gui.py
src/ai_chatbot/prompts/: prompts.py
src/ai_chatbot/tools/: api.py  weather.py
src/ai_chatbot/utils/: utils.py
tests/: test_authenticator.py
